--- a/theme.html
+++ b/theme.html
@@ -11,7 +11,7 @@
       <meta name="text:Contact Address" content=""/>
       <meta name="text:Contact Phone" content=""/>
       <meta name="text:Contact Email" content=""/>
-    <meta name="text:Facbook Username" content=""/>
+    <meta name="text:Facebook Username" content=""/>
     <meta name="text:Dribbble Username" content=""/>
     <meta name="text:TWitter Username" content=""/>
       <meta name="color:Header Color" content="#1abc9c">
