--- a/theme.html
+++ b/theme.html
@@ -290,7 +290,7 @@ ol.notes li img{
         border-radius: 50%;
             
     }  
-  
+{CustomCSS}  
 </style>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
